11-k8s-ingress-tls-ssl/ssl-minimal/k8s/0-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: nasir-python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx
    spec:
      containers:
      - image: nasirnjs/python-flask:007
        name: nasir-python
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nasir-python
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  type: ClusterIP
