11-k8s-ingress-tls-ssl/ssl-minimal/k8s/1-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nasir-python
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  type: ClusterIP
