11-k8s-ingress-tls-ssl/ssl-minimal/k8s/2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-services
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - nasirtechtalks.com
    secretName: nasirtechtalks-tls
  rules:
  - host: nasirtechtalks.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nasir-python
            port:
              number: 80
